fix: popup now cant wrap and will extend if needed

--- a/frontend/main_srcs/styles/popup.css
+++ b/frontend/main_srcs/styles/popup.css
@@ -5,7 +5,7 @@
 	right: 0;
 	left: 15px;
 
-	width: 33%;
+	width: fit-content;
 	height: max-content;
 	overflow: hidden;
 	border-radius: 7px;
@@ -28,6 +28,7 @@
 	font-size: 1em;
 	width: 100%;
 	overflow: hidden;
+	white-space: nowrap;
 }
 
 .popup-close {
